<resources>
    <string name="app_name" translatable="false">TRIfA</string>
    <string name="add_friend_activity_name">Add Friend</string>
    <string name="add_group_activity_name">Create Private Group</string>
    <string name="add_public_group_activity_name">Create Public Group</string>
    <string name="join_public_activity_name">Join Public Group</string>
    <string name="message_list_activity_name">Chat</string>
    <string name="conference_message_list_activity_name">Text Conference</string>
    <string name="group_message_list_activity_name">Group</string>
    <string name="conference_audio_activity_name">Audio Conference</string>
    <string name="conference_audio_activity_player_name">Audio Conference Player</string>
    <string name="set_password_message_empty">Password is empty</string>
    <string name="set_password_message_password_invalid">Password too short</string>
    <string name="set_password_message_password_dont_match">Passwords do NOT match</string>
    <string name="title_activity_calling">Call</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_crash">Crash</string>
    <string name="title_activity_friendinfo">Friendinfo</string>
    <string name="title_activity_conferenceinfo">Conferenceinfo</string>
    <string name="title_activity_groupinfo">Groupinfo</string>
    <string name="title_activity_conferencepeerinfo">Peerinfo</string>
    <string name="title_activity_grouppeerinfo">Group Peerinfo</string>
    <string name="title_activity_aboutpage">About</string>
    <string name="title_activity_set_password">Set Password</string>
    <string name="title_activity_check_password">Enter Password</string>
    <string name="title_activity_share">open with TRIfA</string>
    <string name="title_activity_maintenance">Maintenance</string>
    <string name="title_activity_export">Export</string>
    <string-array name="spinner_own_status_array">
        <item>Online</item>
        <item>Away</item>
        <item>Busy</item>
    </string-array>
    <string name="settings_toolbar_title">Settings</string>
    <string name="pref_header_general">General</string>
    <string-array name="pref_dark_mode_titles">
        <item>System default</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="pref_dark_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_auto_accept_image">auto accept images</string>
    <string name="pref_description_auto_accept_image">auto accept Images and Photos up to 12 MByte in size</string>
    <string name="pref_title_auto_accept_video">auto accept videos</string>
    <string name="pref_description_auto_accept_video">auto accept Videos up to 40 MByte in size</string>
    <string name="pref_title_auto_accept_all_upto">auto accept all files</string>
    <string name="pref_description_auto_accept_all_upto">auto accept all Files up to 2 GByte in size</string>
    <string name="pref_title_video_uv_reversed">reverse UV in Video</string>
    <string name="pref_description_video_uv_reversed">Reverse the order of UV planes in the camera video</string>
    <string name="pref_title_software_echo_cancel">Echo Cancellation</string>
    <string name="pref_description_software_echo_cancel">Use Software Echo Cancellation</string>
    <string name="pref_title_higher_video_quality">Video Quality</string>
    <string name="pref_description_higher_video_quality">Use better Video quality.\nChange needs RESTART!</string>
    <string-array name="pref_higher_video_quality_titles">
        <item>low bandwidth\n(250 kb/s)</item>
        <item>normal bandwidth\n(2500 kb/s)</item>
        <item>high bandwidth\n(3500 kb/s)</item>
    </string-array>
    <string-array name="pref_higher_video_quality_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_video_cam_resolution">Camera Resolution</string>
    <string name="pref_description_video_cam_resolution">What Resolution to use for Video Calling</string>
    <string-array name="pref_video_cam_resolution_titles">
        <item>640x480</item>
        <item>1280x720</item>
        <item>1920x1080</item>
    </string-array>
    <string-array name="pref_video_cam_resolution_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_global_font_size">Font Size</string>
    <string name="pref_description_global_font_size">Select Font Size</string>
    <string-array name="pref_global_font_size_titles">
        <item>very small</item>
        <item>small</item>
        <item>default: normal</item>
        <item>large</item>
        <item>larger</item>
        <item>very large</item>
        <item>extremly large</item>
    </string-array>
    <string-array name="pref_global_font_size_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="pref_title_camera_get_preview_format">Camera Preview Format</string>
    <string name="pref_description_camera_get_preview_format">Camera Preview Format seems to be in the wrong format on some phones</string>
    <string-array name="pref_camera_get_preview_format_titles">
        <item>default: YV12</item>
        <item>some phones: NV21</item>
    </string-array>
    <string-array name="pref_camera_get_preview_format_values">
        <item>YV12</item>
        <item>NV21</item>
    </string-array>
    <string name="pref_title_mic_gain_factor">Mic Gain</string>
    <string name="pref_description_mic_gain_factor">Set a higher Gain if your microphone records with low volume</string>
    <string name="pref_title_mic_gain_factor_toggle">Mic Gain to lower Volume</string>
    <string name="pref_description_mic_gain_factor_toggle">If your microphone records with too much sensitivity, enable this setting and the Mic Gain Factor will actually lower the Volume of the microphone</string>
    <string name="pref_title_gainprocessing_active">Microphone Gain</string>
    <string name="pref_description_gainprocessing_active">adjust Microphone Gain semi automatically to make Sound louder.\nIf there is a problem during Calls try turning off this option</string>
    <string name="pref_title_rnnoise_active">Background Noise</string>
    <string name="pref_description_rnnoise_active">Remove Background Noise with RNNoise</string>
    <string name="pref_title_higher_audio_quality">Audio Quality</string>
    <string name="pref_description_higher_audio_quality">Use better Audio quality.\nChange needs RESTART!</string>
    <string-array name="pref_higher_audio_quality_titles">
        <item>low\n(6 kb/s)</item>
        <item>normal\n(32 kb/s)</item>
        <item>high\n(64 kb/s)</item>
    </string-array>
    <string-array name="pref_higher_audio_quality_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_title_udp_enabled">enable UDP</string>
    <string name="pref_description_udp_enabled">for most mobile devices UDP will cause much more internet traffic.\nChange needs RESTART!\nDefault setting is OFF</string>
    <string name="pref_title_force_udp_only">force UDP mode</string>
    <string name="pref_description_force_udp_only">this will force UDP only mode, some contacts may not be reachable with this setting turned on\nChange needs RESTART!</string>
    <string name="pref_title_orbot_enabled">enable Tor Proxy</string>
    <string name="pref_description_orbot_enabled">You need to install Orbot to use this.\nChange needs RESTART!</string>
    <string name="pref_title_fps_half">lower fps</string>
    <string name="pref_description_fps_half">Video Framerate 1/2 : so 12fps instead of 25fps</string>
    <string name="pref_title_h264_encoder_use_intra_refresh">H264 intra refresh</string>
    <string name="pref_description_h264_encoder_use_intra_refresh">H264 encoder should use intra refresh frames</string>
    <string name="pref_title_start_on_boot">start on boot</string>
    <string name="pref_description_start_on_boot">start the application after boot.\nGoogle does not allow this anymore starting with Android 10</string>
    <string name="pref_title_keep_screen_on_when_map">keep screen with map</string>
    <string name="pref_description_keep_screen_on_when_map">keep the screen turned on, and prevent the phone from locking, when the map is displayed</string>
    <string name="pref_title_use_incognito_keyboard2">incognito Keyboard</string>
    <string name="pref_description_use_incognito_keyboard2">turn on to tell keyboard not to learn from your entered words</string>
    <string name="pref_title_loc_provider_GPS">use GPS</string>
    <string name="pref_description_loc_provider_GPS">use GPS location</string>
    <string name="pref_title_loc_provider_NETWORK">use NETWORK</string>
    <string name="pref_title_window_security">prevent Screenshots</string>
    <string name="pref_description_window_security">Enabling this setting adds FLAG_SECURE to Activities.\nIt prevents screenshots and screen recording and showing content in recents preview</string>
    <string name="pref_title_compact_friendlist">Compact Friendlist</string>
    <string name="pref_description_compact_friendlist">Make the Friendlist more compact, if you have a large list of Friends</string>
    <string name="pref_title_use_push_service">Use Push Service</string>
    <string name="pref_description_use_push_service">WARNING: This will use Google FCM or Unified Push to save Battery and Bandwidth.\nThe app will make HTTPS: connections to some PUSH servers directly (not via Tox).\nOnly activate this if you accept that.\nThis feature needs the Tox Push Message App installed.</string>
    <string name="pref_title_allow_push_server_ntfy">Allow ntfy.sh Server</string>
    <string name="pref_description_allow_push_server_ntfy">WARNING: Allow ntfy.sh server for push notifications, this may leak your metadata of timestamps when you receive push notifications, if a friend subscribes with your push token. ntfy.sh has NO passwords and NO authentication. you have been warned.</string>
    <string name="pref_title_download_push_msg_app">Download Push Message App</string>
    <string name="pref_title_custom_bootstrap_nodes">Use Custom Bootstrap nodes</string>
    <string name="pref_title_local_discovery_enabled">LAN discovery</string>
    <string name="pref_description_local_discovery_enabled">use nodes on local LAN to bootstrap</string>
    <string name="pref_title_U_keep_nospam">keep NoSpam</string>
    <string name="pref_description_U_keep_nospam">keep NoSpam value. This is not safe, only activate if you know what you are doing!</string>
    <string name="pref_title_allow_file_sharing_to_trifa_via_intent">share files</string>
    <string name="pref_description_allow_file_sharing_to_trifa_via_intent">share files to TRIfA via share Intent.</string>
    <string name="pref_title_allow_open_encrypted_file_via_intent">open files from encrypted storage</string>
    <string name="pref_description_allow_open_encrypted_file_via_intent">open files directly from encrypted storage via Intent. This can be potentially dangerous, because other malicious apps could open other files in TRIfA\'s encrypted storage.</string>
    <string name="pref_title_X_battery_saving_mode_new">Battery Savings Mode</string>
    <string name="pref_description_X_battery_saving_mode_new">This will save a more battery, the application will only use the network when files are transferred</string>
    <string name="layout___delete">Delete</string>
    <string name="layout___info">Info</string>
    <string name="layout___add_as_default_ft_contact">add as Default Contact</string>
</resources>